gcc/testsuite/rust/compile/issue-3556.rs
fn main() {
    let ref mut a @ (ref mut b,);
    // { dg-error "expected T\\?, found tuple" "" { target *-*-* } .-1 }
}